style(trigger): fix z-index

--- a/src/trigger/style.less
+++ b/src/trigger/style.less
@@ -1,7 +1,7 @@
 @import '../styles/prefix.less';
 
 :root {
-  --trigger-z-index: 8800;
+  --trigger-z-index: 8900;
 }
 
 .@{prefix} {
